# auto-coin-trader-v2

./: .gitignore  .mcp.json  CLAUDE.md  GUI_README.md  README.md  STRATEGY.md  TODO.md  WEBSOCKET_MONITORING.md  main.py  pyproject.toml  run_gui.py  test_vwap_integration.py  vwap.code.md
.claude/agents/: algo-trading-strategist.md  code-reviewer.md  trading-algorithm-engineer.md
config/: base_settings.py  obi_settings.py  settings.py  vwap_settings.py
data/: futures_ws.py  market_ws.py
docs/: STRATEGY.md  vwap.v1.step1.md  vwap.v1.step2.md
executor/: order_executor.py  order_tracker.py  position_manager.py
gui/: __init__.py  data_broker.py  streamlit_app.py
gui/components/: __init__.py  charts.py  tables.py  widgets.py
gui/utils/: __init__.py  log_reader.py
strategy/: __init__.py  base_strategy.py  indicators.py  obi_scalper.py  vwap_mean_reversion.py
strategy/common/: __init__.py  indicators.py
strategy/obi_scalper/: __init__.py  strategy.py
strategy/vwap_mean_reversion/: __init__.py  strategy.py
test/: README.md  conftest.py  test_order_executor.py
utils/: logger.py
